<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/asked_questions_background"
        android:layout_width="match_parent"
        android:background="#EAEAEA"
        android:fitsSystemWindows="true"
        android:scrollbars="none"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/description_corners">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="9pt"
                        android:text="@string/first_question"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="7pt"
                        android:text="@string/first_answer"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/description_corners">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="9pt"
                        android:text="@string/second_question"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="7pt"
                        android:text="@string/second_answer"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/description_corners">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="9pt"
                        android:text="@string/third_question"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="7pt"
                        android:text="@string/third_answer"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/description_corners">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="9pt"
                        android:text="@string/fourth_question"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="7pt"
                        android:text="@string/fourth_answer"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/description_corners">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="9pt"
                        android:text="@string/fifth_question"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="7pt"
                        android:text="@string/fifth_answer"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/description_corners">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="9pt"
                        android:text="@string/sixth_question"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="7pt"
                        android:text="@string/sixth_answer"/>
                </FrameLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>