<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:textColor="@android:color/transparent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/transparent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:textColor="@android:color/transparent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <FrameLayout
                    android:id="@+id/first_frame_call"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/questions_contact_textviews_corners"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/first_call"
                        android:rotation="180"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="left"
                        android:src="@drawable/call"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:textSize="7pt"
                        android:text="@string/first_number"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <FrameLayout
                    android:layout_width="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="30dp">
                    <View
                        android:layout_width="1dp"
                        android:layout_height="50dp"
                        android:background="#E5E5E5"/>
                </FrameLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:textSize="7pt"
                    android:textColor="@android:color/transparent"
                    android:text="@string/third_number"/>
            </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <FrameLayout
                android:id="@+id/second_frame_call"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:background="@drawable/questions_contact_textviews_corners"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/second_call"
                    android:rotation="180"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="left"
                    android:src="@drawable/call"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:textSize="7pt"
                    android:text="@string/second_number"/>
            </FrameLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <FrameLayout
                android:layout_width="30dp"
                android:layout_height="30dp">
                <View
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:background="#E5E5E5"/>
            </FrameLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="@android:color/transparent"
                android:textSize="7pt"
                android:text="@string/third_number"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <FrameLayout
                android:id="@+id/third_frame_call"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:background="@drawable/questions_contact_textviews_corners"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/third_call"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_width="30dp"
                    android:rotation="180"
                    android:layout_height="30dp"
                    android:layout_gravity="left"
                    android:src="@drawable/call"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:textSize="7pt"
                    android:text="@string/third_number"/>
            </FrameLayout>
        </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <FrameLayout
                    android:layout_width="30dp"
                    android:layout_height="30dp">
                    <View
                        android:layout_width="1dp"
                        android:layout_height="50dp"
                        android:background="#E5E5E5"/>
                </FrameLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:textSize="7pt"
                    android:textColor="@android:color/transparent"
                    android:text="@string/third_number"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <FrameLayout
                    android:id="@+id/fourth_frame_call"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:background="@drawable/questions_contact_textviews_corners"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/fourth_call"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:layout_width="30dp"
                        android:rotation="180"
                        android:layout_height="30dp"
                        android:layout_gravity="left"
                        android:src="@drawable/call"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:textSize="7pt"
                        android:text="@string/fourth_number"/>
                </FrameLayout>
            </LinearLayout>
    </LinearLayout>
    </FrameLayout>
</LinearLayout>